- Improved: "Loading product data" is now in the language file (#2215)
- Improved: Removed size and added maxlength attribute to quantity input fields (#2118)
- Improved: updated currency list according to ISO 4217 (#2082)
- Improved: the reader page id is now set in the site structure but you can still overwrite it per module (#2105)
- Fixed radio button events in Internet Explorer (Ticket #484)
- Fixed products DCA not loaded in rare cases
- Fixed: hide customer definied fields in product edit mode
- Fixed low price calculation for advanced prices
- Fixed sorting by module configuration (#2037)
- Fixed backend category sorting, updated DC_TablePageId driver (#2101)
- Fixed invisible subgroups when no product in parent group (#2121)
- Fixed potential issue in email addresses (#2041)
- Fixed invalid markup in several templates (#2081)
- Fixed related products loaded from product cache (#2236)
- Fixed product cache not considering product start date (#2230)
- Fixed issue with variant generator and prices (#2046)
- Fixed copy/paste of product variants into its own product
- Dropped unimplemented enableGoogleAnalytics checkbox in store config (#2102)

Version 1.3.beta2 (2011-08-28)
------------------------------
- Added: runonce script will automatically generate groups based on categories (pages)
- Added support for multilingual foreignKey in attribute table
- Added a salutation text field to addresses (Ticket #329)
- Added invisible hint to active step in checkout module (Ticket #331)
- Added new rule product conditions to limit by product attribute
- Added option to invert the rule condition (match/match not)
- Added product list caching with intelligent self-configuration to display a "please wait" message only when necessary
- Added caching tables to the maintenance cleaing options
- Added .html5 & .xhtml templates for Contao 2.10 (Ticket #457)
- Added checkout stepcount classes (Ticket #491)